fix: add new app14 class for improved visibility and functionality in navigation

--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,7 @@ body{
     margin-block: 3rem;
     font-family: "Manrope", serif;
 }
-.app,.app0,.app1,.app2,.app3,.app4,.app5,.app6,.app7,.app8,.app9,.app10,.app11, .app12, .app13 {
+.app,.app0,.app1,.app2,.app3,.app4,.app5,.app6,.app7,.app8,.app9,.app10,.app11, .app12, .app13, .app14 {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 4s ease, transform 0.6s ease;
